--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="question-footer">
           <span><b>1</b> von <b id="all-questions">5</b> Fragen</span>
 
-          <button type="button" class="btn btn-primary" onclick="changeQuestion()">nächste Frage</button>
+          <button type="button" class="btn btn-primary" id="next-button" disabled onclick="changeQuestion()">nächste Frage</button>
         </div>
 
       </div>
